
[package]
name = "litch"
authors = ["j-stach"]
version = "0.0.1"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/j-stach/litch"
description = "Simple parser for ITCH 5.0, oriented toward live messages."
keywords = ["itch", "nasdaq", "trading", "finance"]
categories = ["network-programming", "finance"]

exclude = [".git/**", "src/test/**", "TODO.md"]

[dependencies]
nom = "8.0.0"
nsdq-util = "0.1.1"
thiserror = "2.0.12"


